Correcting for reading files